Positionnement du bouton ajout tache

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header id="header"></header>
 
-    <section id="createTaskContainer"></section>
+    <section id="interfaceContainer"></section>
 
     <table>
         <caption>
