onclick pour changer le sens du tri par date

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <tr>
           <th>N°</th>
           <th>Titre</th>
-          <th>
+          <th id="tableHeaderDate" onclick="sortByDateChange()">
             Date
             <svg
               xmlns="http://www.w3.org/2000/svg"
